<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#ffffff">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <include
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                layout="@layout/row_result_search_item" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/tvCarOwnerInforGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/own_car_info"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_border_nhat"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/TextView05"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/dai_dien"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/tvCarOwnerName"
                            android:textStyle="bold"
                            android:textColor="@color/orange"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Thi Nguyễn"
                            android:textAppearance="?android:attr/textAppearanceMedium"/>
                    </LinearLayout>

                    <LinearLayout
                        android:paddingTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/TextView03"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/email"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/tvEmail"
                            android:textStyle="bold"
                            android:textColor="@color/orange"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="phiung1992@gmail.com"
                            android:textAppearance="?android:attr/textAppearanceMedium"/>
                    </LinearLayout>

                    <LinearLayout
                        android:paddingTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/TextView01"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/phone"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/tvCarOwnerPhone"
                            android:textStyle="bold"
                            android:textColor="@color/orange"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="0963248128"
                            android:textAppearance="?android:attr/textAppearanceMedium"/>
                    </LinearLayout>

                    <LinearLayout
                        android:paddingTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/tv_row_Distance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/car_owner_address"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/tvCarOwnerAddress"
                            android:textStyle="bold"
                            android:textColor="@color/orange"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Hồ chí minh city"
                            android:textAppearance="?android:attr/textAppearanceMedium"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_row_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/introduce"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" 
                    android:background="@drawable/layout_border_nhat">

                    <TextView
                        android:id="@+id/tvCarOwnerInformation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dịch vụ luôn có xe đời mới để phục vụ nhu cầu của quý khách. Xe chất lượng cao, giá cả cạnh tranh , với phương châm chữ tín quý hơn vàng.Giá hấp dẫn, đem tới sự tự do và thoải mái hơn cho các bạn ! Chúng ta có thể làm chủ một chiếc xe, chủ động hơn, linh hoạt hơn cho chính công việc cũng như thư giãn với không gian tốt nhất bên chiếc xe tự lái của mình."
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>
                <TextView
                    android:id="@+id/tv_row_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/condition"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" 
                    android:background="@drawable/layout_border_nhat">

                    <TextView
                        android:id="@+id/tvRentalCondition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
						android:text="Thủ tục cực kỳ đơn giản...."
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
