<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popupPostWarningChoose"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/border2"
    android:orientation="vertical"
    android:padding="7dp" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="7dp"
        android:background="@drawable/gradient_bg" >

        <TextView
            android:id="@+id/txtID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/btnClosePopupChoose"
            android:gravity="center"
            android:text="@string/choose_post_warning"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textStyle="bold" >
        </TextView>

        <ImageButton
            android:id="@+id/btnClosePopupChoose"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:background="@drawable/close" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="7dp" >

            <LinearLayout
                android:id="@+id/layoutChooseChotCongAn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/list_selector"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/ImageView03"
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:paddingTop="3dp"
                    android:src="@drawable/police_4car" />

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/chot_cong_an"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="7dp"
                android:layout_height="match_parent"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutChooseGiaoThong"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/list_selector"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/ImageView02"
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:paddingTop="3dp"
                    android:src="@drawable/traffic_4car" />

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/giao_thong"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="7dp" >

            <LinearLayout
                android:id="@+id/layoutChooseTaiNan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/list_selector"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/ImageView01"
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:paddingTop="3dp"
                    android:src="@drawable/car_accident" />

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tai_nan"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="7dp"
                android:layout_height="match_parent"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutChooseTrangThai"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/list_selector"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/iv1"
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:paddingTop="3dp"
                    android:src="@drawable/status_4car" />

                <TextView
                    android:id="@+id/txtFuck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/trang_thai"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>